Adjust spacing between social link icons. Fix label alignment on textarea part of contact form

--- a/style.css
+++ b/style.css
@@ -101,8 +101,16 @@ summary {
     text-align: center;
 }
 
+.contactInfo a {
+    margin: 15px;
+}
+
 label, input, textarea {
     font-size: 24px;
+}
+
+textarea {
+    vertical-align: top;
 }
 
 button {
